# exercise-in-computational-physics

./: .gitignore
TeX/: .gitignore  dice_game.tex  monte-carlo.tex  numeric-calculation.tex
cpp/: .gitignore  CMakeLists.txt  Mt.cpp  Mt.h  Sample.cpp  Sample.h  matplotlib.test.cpp  matplotlibcpp.h  pi.cpp  random.cpp  sphere.cpp  sphere2d.cpp  sphere_multi.cpp  util.cpp  util.h  util2.h
cpp/dice_game/: dice.cpp  dice_multithread.cpp  dice_openmp.cpp  helloOpenMp.cpp  hello_multithread.cpp
cpp/multithread/: CMakeLists.txt  multithread.cpp
cpp/numeric_calculation/: fall1.cpp  fall2.cpp  fall3.cpp  n.cpp  oscil4.cpp  oscil5.cpp  oscil7.cpp
cpp/numeric_calculation/euler/: fall1.cpp  fall2.cpp  fall3.cpp  n.cpp  n_energy.cpp  oscil4.cpp  oscil5.cpp  oscil6.cpp  oscil7.cpp
cpp/numeric_calculation/leap-frog/: n.cpp  n_energy.cpp  oscil.cpp
cpp/numeric_calculation/runge-kutta/: n.cpp  n_energy.cpp
python/hw01trumpgame/: main.py  main_random.py  util.py
python/hw02randomwalk/: main.py  main_random_walk_2d.py
python/hw03pi/: main_pi.py
python/report1_monte_carlo/: plot.eps  plot.py  plot2d.py  plotmulti.py  plotmulti_v_s.py
